<resources>
    <string name="app_name">TouristGold</string>

    <string name="welcome">Welcome Tourist Gold</string>
    <string name="welcome_text">You\'re lucky to be a tourist. Run the app &amp; roll on! Keep going &amp; find all the city\'s
        treasures. Always remember to take awesome photos. \nGood luck and hav\' fun!</string>
    <string name="ready">I\'m ready</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_up">Sing up</string>
    <string name="register">Register</string>
    <string name="error_empty_password">Please provide your password</string>
    <string name="error_invalid_password">Your password must be at least 6 characters: at least one digit and one special character(@,#,$,%)</string>
    <string name="error_empty_email">Please provide your email address</string>
    <string name="error_invalid_email">Invalid email</string>
</resources>
