<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context="com.example.gabriella.touristgold.WelcomeActivity">

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/margin_top_description"
        android:text="@string/welcome_text"
        android:textAppearance="@style/NormalText" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description_text"
        android:text="@string/welcome"
        android:textAppearance="@style/HeaderText" />

    <Button
        android:id="@+id/ready_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/description_text"
        android:background="?attr/selectableItemBackground"
        android:text="@string/ready"
        android:textAppearance="@style/ButtonText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/yellow_logo_60px" />

</RelativeLayout>
