<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context="com.example.gabriella.touristgold.SigupActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/yellow_logo_60px" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/card_view_background"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_between_elements"
                android:text="@string/sing_up"
                android:textAppearance="@style/HeaderText"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sign_up_text"
                android:layout_marginRight="@dimen/margin_between_elements"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_email_black_48px" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sign_up_text"
                android:layout_marginBottom="@dimen/margin_between_elements"
                android:layout_toRightOf="@+id/email_icon"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_wrapper"
                android:layout_marginRight="@dimen/margin_between_elements"
                android:layout_marginTop="18dp"
                android:src="@drawable/ic_lock_black_48px" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_wrapper"
                android:layout_marginBottom="@dimen/margin_between_elements"
                android:layout_toRightOf="@+id/password_icon"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/password_wrapper"
                android:background="?attr/selectableItemBackground"
                android:text="@string/register"
                android:textAppearance="@style/ButtonText"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
